nomodule scripts are fetched in some cases (with empty cache or in new tab) https://bugs.webkit.org/show_bug.cgi?id=194337 <rdar://problem/49700924>

Reviewed by Ryosuke Niwa.

Source/WebCore:

The preloader attempt to preload "src" of script tags. However, script tag attributed with "nomodule"
will never be executed by WebKit since it already supports modules. Avoid loading this content in
the preloader.

Test: http/wpt/preload/classic-script-with-nomodule.html

* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttribute):
(WebCore::TokenPreloadScanner::StartTagScanner::shouldPreload):

LayoutTests:

* http/wpt/preload/classic-script-with-nomodule-expected.txt: Added.
* http/wpt/preload/classic-script-with-nomodule.html: Added.
* http/wpt/preload/resources/classic.js: Added.
* http/wpt/preload/resources/module.js: Added.


Canonical link: https://commits.webkit.org/219686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254970 268f45cc-cd09-0410-ab3c-d52691b4dbfc